<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.admin.InsertRestaurantActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image"
                android:src="@drawable/add_img_bg"/>

            <ProgressBar
                android:id="@+id/progress_loader"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/resto_name_et"
            android:hint="@string/restaurant_name"
            android:autofillHints="restaurant name"
            android:inputType="text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/resto_desc_et"
                android:hint="@string/description"
                android:autofillHints="Description"
                android:minLines="3"
                android:maxLines="6"
                android:inputType="text|textMultiLine" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/resto_phone_et"
                android:hint="@string/phone"
                android:autofillHints="phone"
                android:inputType="phone" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_btn"
                android:text="@string/save"/>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="20dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipes_list"
                android:background="@color/teal_200"
                android:visibility="gone"
                android:id="@+id/recipe_list_btn"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>