<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.admin.InsertRecipeActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/image"
                android:src="@drawable/add_img_bg"/>

            <ProgressBar
                android:id="@+id/progress_loader"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />

        </RelativeLayout>

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_name_et"
                android:hint="@string/recipe_name"
                android:autofillHints="recipe name"
                android:inputType="text" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_desc_et"
                android:hint="@string/description"
                android:autofillHints="Description"
                android:minLines="3"
                android:maxLines="6"
                android:inputType="text|textMultiLine" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recipe_price_et"
                android:hint="@string/price"
                android:autofillHints="price"
                android:inputType="numberDecimal" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp"/>

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/save_btn"
                android:text="@string/save"/>


        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>